--- a/kayako-helper/manifest.json
+++ b/kayako-helper/manifest.json
@@ -72,25 +72,12 @@
   },
 
   "host_permissions": [
-    "https://*.kayako.com/*",
-    "https://*.chatgpt.com/*",
-    "https://chat.openai.com/*",
-    "https://chatgpt.com/*",
-    "https://push.clients6.google.com/*",
-    "https://content-push.googleapis.com/upload/",
-    "https://gemini.google.com/*",
-    "https://ephor.ai/*",
-    "https://*.ephor.ai/*",
+    "https://*/*",
 
-
-
-    "https://*.alpha.school/*",
     "*://ftgwtrk63c.execute-api.us-east-1.amazonaws.com/*",
     "*://api-js.mixpanel.com/*",
     "*://o924797.ingest.sentry.io/*",
-    "*://api.iconify.design/*",
-    "https://cognito-identity.us-east-1.amazonaws.com/*",
-    "https://ftgwtrk63c.execute-api.us-east-1.amazonaws.com/*"
+    "*://api.iconify.design/*"
 
   ],
 
