--- a/kayako-helper/tsconfig.json
+++ b/kayako-helper/tsconfig.json
@@ -20,6 +20,7 @@
     "checkJs":           false,
     "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
+    "noEmit": true,
 
     /* ▾ Incremental build & DX ▾ */
     "incremental":       true,
@@ -58,6 +59,7 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/selectors/build-selectors.mjs"
   ]
 }
