--- a/kayako-helper/package.json
+++ b/kayako-helper/package.json
@@ -12,12 +12,13 @@
     "dev": "npm-run-all --parallel watch-selectors vite-dev",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "build": "npm run clean && npm run build-native && npm run build:bg && npm-run-all --sequential build:cs:* build:helpers build:shared build:popup",
-    "build:cs": "npm-run-all --parallel build:cs:kayako build:cs:chatgpt build:cs:gemini build:cs:ephor",
+    "build:cs": "npm-run-all --parallel build:cs:kayako build:cs:chatgpt build:cs:gemini build:cs:ephor build:cs:aihorizons",
     "build:bg": "vite build --config ./configs/vite.bg.ts",
     "build:cs:kayako": "vite build --config ./configs/vite.cs.kayako.ts",
     "build:cs:chatgpt": "vite build --config ./configs/vite.cs.chatgpt.ts",
     "build:cs:gemini": "vite build --config ./configs/vite.cs.gemini.ts",
     "build:cs:ephor": "vite build --config ./configs/vite.cs.ephor.ts",
+    "build:cs:aihorizons": "vite build --config ./configs/vite.cs.aihorizons.ts",
     "build:popup": "vite build --config ./configs/vite.popup.ts",
     "build:shared": "vite build --config ./configs/vite.activeTabButton.ts",
     "build:helpers": "vite build --config ./configs/vite.activeTabButton.ts && vite build --config ./configs/vite.promptInserter.ts"
