I love Xica Mineira!!!!!!!!!!!!!!!! 😍🥰💖

--- a/kayako-helper/package.json
+++ b/kayako-helper/package.json
@@ -12,6 +12,9 @@
     "dev": "npm-run-all --parallel watch-selectors vite-dev",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "build": "npm run clean && npm run build-native && npm run build:bg && npm-run-all --sequential build:cs:* build:helpers build:shared build:popup",
+    "build:release": "npm run build && node scripts/copy-public.mjs && node scripts/strip-maps.mjs",
+    "package:release": "node scripts/package-extension.mjs",
+    "release": "npm run build:release && npm run package:release",
     "build:cs": "npm-run-all --parallel build:cs:kayako build:cs:chatgpt build:cs:gemini build:cs:ephor build:cs:aihorizons",
     "build:bg": "vite build --config ./configs/vite.bg.ts",
     "build:cs:kayako": "vite build --config ./configs/vite.cs.kayako.ts",
@@ -29,6 +32,7 @@
     "json5": "^2.2.3",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.10",
     "prettier": "^3.3.1",
     "sass": "^1.89.2",
     "ts-node": "^10.9.2",
